Fix text-alignment of footer

--- a/src/components/RecipeBox.css
+++ b/src/components/RecipeBox.css
@@ -1,7 +1,11 @@
 .recipe-box {
     position: relative;
+}
+
+.recipe-box h1 {
     text-align: center;
 }
+
 
 .footer {
     text-align: left;
